# sintetic

./: .gitignore  AGENTS.md  README.md  pyproject.toml  synthetic-ds.yaml
docs/plans/: 2026-04-06-visual-local-app.md
src/synthetic_ds/: __init__.py  app_state.py  chunking.py  circuit.py  cli.py  config.py  curate.py  examples_editor.py  exporter.py  folder_picker.py  generate.py  indexing.py  inference.py  ingest.py  job_runner.py  math_markers.py  models.py  obs.py  pipeline.py  prompts.py  reporting.py  secrets.py  semantic_chunking.py  splitter.py  storage.py  text.py  verify.py  webapp.py
src/synthetic_ds/web/frontend/: .gitignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
src/synthetic_ds/web/frontend/src/: App.tsx  index.css  main.tsx
src/synthetic_ds/web/frontend/src/hooks/: useArtifacts.ts  useConfig.ts  useDashboardExamples.ts  (+6 more)
tests/: test_app_cli.py  test_app_state.py  test_circuit_breaker.py  test_cli.py  test_cli_providers.py  test_config_providers.py  test_curate.py  test_export.py  test_folder_picker.py  test_generate_types.py  test_generation_resume.py  test_generation_targets.py  test_inference.py  test_ingest.py  test_job_pool.py  test_job_runner.py  test_math_markers.py  test_multimodal_pipeline.py  test_pipeline_session.py  test_prompts.py  test_report.py  test_run_pipeline.py  test_secrets.py  test_split.py  test_storage.py  test_text_pipeline.py  test_verify.py  test_web_jobs.py  test_webapp_boot.py  test_webapp_static.py
(+45 files in other folders)
